gitops-factory/namespaces/platform-ops/shared.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: platform-ops
  labels:
    app.kubernetes.io/name: default-deny-all
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"v1","kind":"redacted"}'
  uid: 7c3e6bd3-b190-4071-81cf-23f0ccd9097d
  resourceVersion: '7315305'
  generation: 6
  creationTimestamp: '2025-06-28T08:11:33Z'
  managedFields:
  - manager: kubectl-client-side-apply
    operation: Update
    apiVersion: v1
    time: '2025-06-28T08:11:33Z'
    fieldsType: FieldsV1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
